@@ -1,6 +1,7 @@
 0.04
  - Fix author test requires.
  - Update to Module::Install 1.18.
+ - Update author name.
 
 0.03 2015-09-24T00:23:10+02:00
  - Move author tests to xt/ directory.
